--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,7 @@
     }
 
   </style>
-  
+
   <section id="about">
     <h1>So, I am the about page.</h1>
 
@@ -34,9 +34,13 @@
       with the sole aim to get the concepts
       behind Redux.
       Since that has been achieved, the author,
-      Vicradon, decided to make a PWA of it. You know
+      <a style="font-size:2rem; color: white; text-decoration: none; padding: 0 1rem;" href="https://github.com/Vicradon">Vicradon</a>, decided to make a PWA of it. You know
       just to solidify knowledge a bit. Now, we are
       gonna have fun!
+    </p>
+
+    <p>See the code of the project 
+      <a style="font-size:2rem; color: white; text-decoration: none; padding: 0 1rem;" href="https://github.com/Vicradon/reduxify">here.</a>
     </p>
   </section>
 </body>
